# hpc-lecture

./: .gitignore  CMakeLists.txt  README.md  diffusion.py  particles.cpp  particles.py  particles_kokkos.cpp  raytracing.py
